--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@trybe/eslint-config-frontend": "^1.8.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
